refactor: 서비스 레이어에 있던 도메인 이벤트 위치를 도메인 안으로 변경